2007-03-18  Wim Taymans  <wim@fluendo.com>

	Based on patch by: Paul Davis <paul at linuxaudiosystems dot com>

	* ext/jack/gstjackaudioclient.c: (gst_jack_audio_unref_connection):
	Don't need to take the connection lock, it will not be used and could
	cause deadlocks.

2007-03-16  Edward Hervey  <edward@fluendo.com>

	* sys/osxvideo/osxvideosink.m:
	Fix previous commit, we want to pass the NSView in the message.

2007-03-16  Edward Hervey  <edward@fluendo.com>

	* sys/osxvideo/osxvideosink.m:
	Emit 'have-ns-view' message when working in embedded mode. The message
	will contain a pointer to the newly created NSView.

2007-03-16  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst/mpegvideoparse/mpegpacketiser.c: (mpeg_util_find_start_code),
	(collect_packets), (set_par_from_dar), (set_fps_from_code),
	(mpeg_util_parse_extension_packet), (mpeg_util_parse_sequence_hdr),
	(mpeg_util_parse_picture_hdr):
	* gst/mpegvideoparse/mpegpacketiser.h:
	* gst/mpegvideoparse/mpegvideoparse.c:
	(mpegvideoparse_handle_sequence), (mpegvideoparse_handle_picture),
	(mpegvideoparse_drain_avail), (gst_mpegvideoparse_chain),
	(mpv_parse_sink_event), (plugin_init):
	* gst/mpegvideoparse/mpegvideoparse.h:
	Move the MPEG specific byte parsing into the mpegpacketiser code.

	Add parsing of picture types, that just feeds into a debug message
	for now.

	Fix some 64-bit format strings.

2007-03-16  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst/mpegaudioparse:
	Remove empty dir.

2007-03-16  Stefan Kost  <ensonic@users.sf.net>

	* gst/equalizer/gstiirequalizer10bands.c:
	(gst_iir_equalizer_10bands_init):
	  A 10 band EQ should be initialized to 10 bands and not to 3.

2007-03-15  Jan Schmidt  <thaytan@mad.scientist.com>

	* configure.ac:
	* gst/mpeg1videoparse/Makefile.am:
	* gst/mpeg1videoparse/gstmp1videoparse.c:
	* gst/mpeg1videoparse/gstmp1videoparse.h:
	* gst/mpeg1videoparse/mp1videoparse.vcproj:
	* gst/mpegvideoparse/Makefile.am: