@@ -1,3 +1,11 @@
+2007-03-22  Sebastian Dröge  <slomo@circular-chaos.org>
+
+	* ext/wavpack/gstwavpackdec.c: (gst_wavpack_dec_chain):
+	Don't use gst_pad_alloc_buffer() as we might clip the buffer later and
+	BaseTransform-based elements will likely break because of wrong
+	unit-size. Also plug a possible memleak that happens when decoding
+	fails for some reason.
+
 2007-03-18  Wim Taymans  <wim@fluendo.com>
 
 	Based on patch by: Paul Davis <paul at linuxaudiosystems dot com>
